resources/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-vue-todos
  labels:
    app.kubernetes.io/name: vue-todos
    app.kubernetes.io/instance: todos
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http-8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: vue-todos
    app.kubernetes.io/instance: todos
